--- a/index.html
+++ b/index.html
@@ -8,4 +8,41 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
+<body>
+  <!-- Header -->
+  <header>
+    <h1>Developer Portfolio</h1>
+      <!-- Header Nav Links -->
+      <nav class="header-nav">
+        <a href="#">Link</a>
+      </nav>
+  </header>
+   
+  <!-- Main Body Content-->
+  <main>
+    <!-- About Me -->
+    <section class="about-me-section">
+       <h1>About Me</h1>
+    </section>
+    <section class="work-section">
+      <h1>Work</h1>
+      <div class="work-card">
+      </div>
+      <div class="work-card">
+      </div>
+      <div class="work-card">
+      </div>
+      <div class="work-card">
+      </div>
+      <div class="work-card">
+      </div>
+    </section>
+  </main>
+  
+    <!-- Footer -->
+    <footer>
+        <h1>Contact Me</h1>
+    </footer>
+</body>
+
 </html>
