adding css for header element

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <h1>Developer Portfolio</h1>
       <!-- Header Nav Links -->
       <nav class="header-nav">
-        <a href="#">Link</a>
+        <ul>
+            <a href="#">About Me</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
+        </ul>
       </nav>
   </header>
    
