adding background and profile picture

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </ul>
       </nav>
   </header>
+
+  <figure class="background-pic"></figure>
+  <figure class="profile-pic"></figure>
    
   <!-- Main Body Content-->
   <main>
