Adding the about me section CSS

--- a/index.html
+++ b/index.html
@@ -12,24 +12,36 @@
   <!-- Header -->
   <header>
     <h1>Developer Portfolio</h1>
-      <!-- Header Nav Links -->
-      <nav class="header-nav">
-        <ul>
-            <a href="#">About Me</a>
-            <a href="#">Work</a>
-            <a href="#">Contact</a>
-        </ul>
-      </nav>
+    <!-- Header Nav Links -->
+    <nav class="header-nav">
+      <ul>
+        <a href="#">About Me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact</a>
+      </ul>
+    </nav>
   </header>
 
   <figure class="background-pic"></figure>
   <figure class="profile-pic"></figure>
-   
+
   <!-- Main Body Content-->
   <main>
     <!-- About Me -->
     <section class="about-me-section">
-       <h1>About Me</h1>
+      <h1>About Me</h1>
+      <div id="about-me-para">
+        <p> Long su mmary here: placeholderrrrrrrrrrrrrrrr rrrrrrrrrrrrr
+          rrr rrrrrrrr rrr rrrrrrrrrrrrr rrrrrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrr
+          rrrrr rrrrr rrrrrrrrr rrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrrrr
+          rrrr rrrrrrr rrrrrr rrrrrrrr rrrrrrrrrrrrr rrrrrrrrrrrrrrr rrrrrrrrrrrr
+          rrr rrrrrrrrr rrrrrrrrr rrrrrrr rrrrrrrrrrrr rrrrrr rrr rrrrrr rrr r rr rrrrrrrrrrrr
+          rrr rrrrr rrr rrrr rrrrr rrrrr rrrrrrr rrrr rrrr rrrr rrrrrrrrr rrrrr rrrrrr rrrrrrr rr
+          rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr. bsfgbf
+          dfbfgb dfgbdfgb fdgbdfgb dfgb dfgbd fgb dfgb dfbg dfgb dfgb fd bfdb dfgb
+          dfgbdfgb fbg fdgb dfgb dfgb fdb.
+        </p>
+      </div>
     </section>
     <section class="work-section">
       <h1>Work</h1>
@@ -45,11 +57,11 @@
       </div>
     </section>
   </main>
-  
-    <!-- Footer -->
-    <footer>
-        <h1>Contact Me</h1>
-    </footer>
+
+  <!-- Footer -->
+  <footer>
+    <h1>Contact Me</h1>
+  </footer>
 </body>
 
 </html>
