--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- Header Nav Links -->
     <nav class="header-nav">
       <ul>
-        <a href="#">About Me</a>
-        <a href="#">Work</a>
-        <a href="#">Contact</a>
+        <a href="#about-me-link">About Me</a>
+        <a href="#work-link">Work</a>
+        <a href="#contact-me-link">Contact</a>
       </ul>
     </nav>
   </header>
@@ -28,7 +28,7 @@
   <!-- Main Body Content-->
   <main>
     <!-- About Me -->
-    <section class="about-me-section">
+    <section class="about-me-section" id="about-me-link">
       <h1>About Me</h1>
       <div id="about-me-para">
         <p> Long su mmary here: placeholderrrrrrrrrrrrrrrr rrrrrrrrrrrrr
@@ -43,27 +43,28 @@
         </p>
       </div>
     </section>
-    <section class="work-section">
+    <section class="work-section" id="work-link">
       <h1>Work</h1>
       <div class="work-cards-group">
         <figure class="biggest-card">
-          <h3 class="project-header">Project 1</h3>
-          <img src="./assets/images/project-background.png" alt="Project 1">
+          <h3 class="project-header">Horiseon</h3>
+          <a href="https://krweidner.github.io/HoriseonSampleSite">
+            <img src="./assets/images/project-background.png"></a>
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 1</h3>
+          <h3 class="project-header">Project 2</h3>
           <img src="./assets/images/project-background.png" alt="Project 2">
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 1</h3>
+          <h3 class="project-header">Project 3</h3>
           <img src="./assets/images/project-background.png" alt="Project 3">
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 1</h3>
+          <h3 class="project-header">Project 4</h3>
           <img src="./assets/images/project-background.png" alt="Project 4">
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 1</h3>
+          <h3 class="project-header">Project 5</h3>
           <img src="./assets/images/project-background.png" alt="Project 5">
         </figure>
       </div>
@@ -73,7 +74,7 @@
   <!-- Footer -->
   <footer>
     <h1>Contact Me</h1>
-    <section class="contact-info">
+    <section class="contact-info" id="contact-me-link">
       <ul>
         <p class="link-element">612.356.4151</p>
         <p class="link-element">ktabe13@gmail.com</p>
