--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </nav>
   </header>
 
+  <h2 id="name-tag">Katy Weidner</h2>
   <figure class="background-pic"></figure>
   <figure class="profile-pic"></figure>
 
@@ -31,15 +32,12 @@
     <section class="about-me-section" id="about-me-link">
       <h1>About Me</h1>
       <div id="about-me-para">
-        <p> Long su mmary here: placeholderrrrrrrrrrrrrrrr rrrrrrrrrrrrr
-          rrr rrrrrrrr rrr rrrrrrrrrrrrr rrrrrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrr
-          rrrrr rrrrr rrrrrrrrr rrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrr rrrrrrrrrrrrr
-          rrrr rrrrrrr rrrrrr rrrrrrrr rrrrrrrrrrrrr rrrrrrrrrrrrrrr rrrrrrrrrrrr
-          rrr rrrrrrrrr rrrrrrrrr rrrrrrr rrrrrrrrrrrr rrrrrr rrr rrrrrr rrr r rr rrrrrrrrrrrr
-          rrr rrrrr rrr rrrr rrrrr rrrrr rrrrrrr rrrr rrrr rrrr rrrrrrrrr rrrrr rrrrrr rrrrrrr rr
-          rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr. bsfgbf
-          dfbfgb dfgbdfgb fdgbdfgb dfgb dfgbd fgb dfgb dfbg dfgb dfgb fd bfdb dfgb
-          dfgbdfgb fbg fdgb dfgb dfgb fdb.
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </p>
       </div>
     </section>
