adding code comments

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     </nav>
   </header>
 
+  <!-- Defines profile pic, background image and displayed name tag -->
   <h2 id="name-tag">Katy Weidner</h2>
   <figure class="background-pic"></figure>
   <figure class="profile-pic"></figure>
 
   <!-- Main Body Content-->
   <main>
-    <!-- About Me -->
+    <!-- About Me Section -->
     <section class="about-me-section" id="about-me-link">
       <h1>About Me</h1>
       <div id="about-me-para">
@@ -41,16 +42,21 @@
         </p>
       </div>
     </section>
+    <!-- Work Section -->
     <section class="work-section" id="work-link">
       <h1>Work</h1>
       <div class="work-cards-group">
+        <!-- defining biggest card class to handle the first work card 
+          which needs to be bigger than the rest -->
         <figure class="biggest-card">
           <h3 class="project-header">Horiseon</h3>
+          <!-- Image with link to github project page -->
           <a href="https://krweidner.github.io/HoriseonSampleSite">
             <img src="./assets/images/project-background.png"></a>
         </figure>
         <figure class="work-card">
           <h3 class="project-header">Project 2</h3>
+          <!-- rest of images are just placeholders with no link -->
           <img src="./assets/images/project-background.png" alt="Project 2">
         </figure>
         <figure class="work-card">
@@ -71,11 +77,13 @@
 
   <!-- Footer -->
   <footer>
+    <!-- Contact Info Section -->
     <h1>Contact Me</h1>
     <section class="contact-info" id="contact-me-link">
       <ul>
         <p class="link-element">612.356.4151</p>
         <p class="link-element">ktabe13@gmail.com</p>
+        <!-- Contact links: only github works now, rest are placeholder or simple text -->
         <a class="link-element" href="https://github.com/KRWeidner"> GitHub</a>
         <a class="link-element" href="placeholder"> Twitter</a>
         <a class="link-element" href="placeholder"> Spotify</a>
