Added project link to fortune app

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <img src="./assets/images/project-background.png"></a>
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 2</h3>
-          <!-- rest of images are just placeholders with no link -->
+          <h3 class="project-header">Fortune Of The Day</h3>
+          <a href="https://benwhann.github.io/Fortune-Of-The-Day/">
           <img src="./assets/images/project-background.png" alt="Project 2">
         </figure>
         <figure class="work-card">
