--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <img src="./assets/images/project-background.png" alt="Project 2">
         </figure>
         <figure class="work-card">
-          <h3 class="project-header">Project 3</h3>
+          <h3 class="project-header">Workout Tracker</h3>
+          <a href="https://waist-management-e6142ec4ba30.herokuapp.com">
           <img src="./assets/images/project-background.png" alt="Project 3">
         </figure>
         <figure class="work-card">
