--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <figure class="work-card">
           <h3 class="project-header">Fortune Of The Day</h3>
           <a href="https://benwhann.github.io/Fortune-Of-The-Day/">
-          <img src="./assets/images/project-background.png" alt="Project 2">
+          <img src="./assets/images/project-background.png" alt="Fortune Of The Day">
         </figure>
         <figure class="work-card">
           <h3 class="project-header">Workout Tracker</h3>
           <a href="https://waist-management-e6142ec4ba30.herokuapp.com">
-          <img src="./assets/images/project-background.png" alt="Project 3">
+          <img src="./assets/images/project-background.png" alt="Workout Tracker">
         </figure>
         <figure class="work-card">
           <h3 class="project-header">Project 4</h3>
