--- a/index.html
+++ b/index.html
@@ -58,15 +58,18 @@
           <h3 class="project-header">Fortune Of The Day</h3>
           <a href="https://benwhann.github.io/Fortune-Of-The-Day/">
           <img src="./assets/images/project-background.png" alt="Fortune Of The Day">
+        </a>
+        </figure>
+        <figure class="work-card">
+          <h3 class="project-header">Project 3</h3>
+          <a href="https://waist-management-e6142ec4ba30.herokuapp.com"></a>
+          <img src="./assets/images/project-background.png" alt="Project 3">
         </figure>
         <figure class="work-card">
           <h3 class="project-header">Workout Tracker</h3>
           <a href="https://waist-management-e6142ec4ba30.herokuapp.com">
           <img src="./assets/images/project-background.png" alt="Workout Tracker">
-        </figure>
-        <figure class="work-card">
-          <h3 class="project-header">Project 4</h3>
-          <img src="./assets/images/project-background.png" alt="Project 4">
+        </a>
         </figure>
         <figure class="work-card">
           <h3 class="project-header">Project 5</h3>
